fixed bug with overflow index.html <hr> for tablets

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -78,6 +78,7 @@ h6 {
 
 .divider--tablet-only {
   display: none;
+  margin: 0;
 }
 
 .divider--mobile-only {
